--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 {
   "imports": {
     "react": "https://esm.sh/react@^19.2.4",
+    "react-dom/client": "https://esm.sh/react-dom@^19.2.4/client",
     "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
     "react/": "https://esm.sh/react@^19.2.4/",
     "@google/genai": "https://esm.sh/@google/genai@^1.38.0",
@@ -36,5 +37,6 @@
 </head>
   <body class="bg-slate-900 text-slate-100 min-h-screen">
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
